--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "akuma/azure-test",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.5.9"
     },
     "config": {
         "preferred-install": "dist"
