--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,23 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  phpVersion: 7.2
+  phpVersion: 7.1
 
 steps:
-- script: |
-    sudo update-alternatives --set php /usr/bin/php$(phpVersion)
-    sudo update-alternatives --set phar /usr/bin/phar$(phpVersion)
-    sudo update-alternatives --set phpdbg /usr/bin/phpdbg$(phpVersion)
-    sudo update-alternatives --set php-cgi /usr/bin/php-cgi$(phpVersion)
-    sudo update-alternatives --set phar.phar /usr/bin/phar.phar$(phpVersion)
-    php -version
-  displayName: 'Use PHP version $(phpVersion)'
+    - script: |
+        sudo update-alternatives --set php /usr/bin/php$(phpVersion)
+        sudo update-alternatives --set phar /usr/bin/phar$(phpVersion)
+        sudo update-alternatives --set phpdbg /usr/bin/phpdbg$(phpVersion)
+        sudo update-alternatives --set php-cgi /usr/bin/php-cgi$(phpVersion)
+        sudo update-alternatives --set phar.phar /usr/bin/phar.phar$(phpVersion)
+        php -version
+      displayName: 'Use PHP version $(phpVersion)'
 
-- script: composer install --no-interaction --prefer-dist
-  displayName: 'composer install'
+    - script: composer install --no-interaction --prefer-dist
+      displayName: 'composer install'
+
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(system.defaultWorkingDirectory)'
+        includeRootFolder: false
+    - task: PublishBuildArtifacts@1
